# dclock

./: CHANGELOG.md  README.md  dclock.cabal  default.nix  diagram.md  shell.nix
.github/workflows/: ci.yml  haskell.yml
Lib/: DecimalTime.hs  PrettyPrinter.hs  Types.hs
app/: Main.hs
test/: DecimalTimeSpec.hs  PrettyPrinterSpec.hs
