cabal-version:      3.0
name:               dclock
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Travis Montoya
maintainer:         trav@hexproof.sh
homepage:           https://github.com/travgm/dclock
build-type:         Simple
synopsis:           dclock
description:        A simple decimal clock that maps your day to 1000 decimal minutes        
extra-doc-files:    CHANGELOG.md
category:           Time
stability:          experimental

common warnings
    ghc-options: -Wall -fwarn-tabs -O2

executable dclock
    import:           warnings

    main-is:          Main.hs

    build-depends:    base ^>=4.17.2.1,
                      time ^>=1.14,
                      machines ^>= 0.7.2,
                      text ^>= 2.1.1,
                      QuickCheck ^>= 2.14

    hs-source-dirs:   app
    default-language: Haskell2010
