cabal-version:      3.0
name:               dclock
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Travis Montoya
maintainer:         trav@hexproof.sh
homepage:           https://github.com/travgm/dclock
build-type:         Simple
synopsis:           dclock
description:        A simple decimal clock that maps your day to 1000 decimal minutes
extra-doc-files:    CHANGELOG.md
category:           Time
stability:          experimental

source-repository    head
  type:                git
  location:            git@github.com:travgm/dclock.git

common warnings
    ghc-options: -Wall -fwarn-tabs -O2

library
   hs-source-dirs:     Lib
   exposed-modules:    DecimalTime,
                       PrettyPrinter,
                       Types
   build-depends:      base ^>=4.17.2.1,
                       time ^>=1.14,
                       lens ^>= 5.2.1,
                       text ^>= 2.1.1,
                       ansi-terminal ^>=1.1.1,
                       QuickCheck ^>= 2.14

   default-language:    Haskell2010

executable dclock
    import:           warnings

    main-is:          Main.hs

    build-depends:    base ^>=4.17.2.1,
                      dclock,
                      time ^>=1.14,
                      machines ^>= 0.7.2,
                      text ^>= 2.1.1,
                      optparse-applicative ^>= 0.18.1
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite dclock-test
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    hs-source-dirs:   test
    build-depends:    base
                    , dclock
                    , time ^>=1.14
                    , lens ^>= 5.2.1 
                    , text ^>= 2.1.1
                    , hspec
                    , QuickCheck
                    , hspec-discover
    other-modules:    DecimalTimeSpec,
                      PrettyPrinterSpec
    build-tool-depends: hspec-discover:hspec-discover
    default-language: Haskell2010